--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Assignment</string>
     <string name="title_activity_assignment">Assignment</string>
+    <string name="success">Success</string>
+    <string name="restore">Restore</string>
 </resources>
